--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,10 @@ h1, h2, h3, h4, h5, h6 {
     padding: 90px 0;
 }
 
+.section--gray {
+    background-color: #f8f8f8;
+}
+
 .section__header {
     width: 100%;
     max-width: 950px;
@@ -261,43 +265,45 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/* About */
-.about {
+/* Cards */
+.cards {
     padding-top: 60px;
 }
 
-.about__inner {
+.cards__inner {
     display: flex;
     justify-content: space-between;
 }
 
-.about__item {
+.cards__item {
     width: 380px;
+}
 
+.cards__item__inner {
     background: #95e1d3;
 }
 
-.about__item:hover .about__img{
+.cards__item:hover .cards__img{
     transform: translate3d(-10px,-10px,0);
 }
 
-.about__img {
+.cards__img {
     background: linear-gradient(#f38181,#fce38a);
     
     transition: transform .2s linear;
     position: relative;
 }
 
-.about__img img {
+.cards__img img {
     display: block;
     transition: opacity .2s linear;
 }
 
-.about__item:hover .about__img img {
+.cards__item:hover .cards__img img {
     opacity: .1;
 }
 
-.about__text {
+.cards__text {
     width: 100%;
 
     text-transform: uppercase;
@@ -314,8 +320,30 @@ h1, h2, h3, h4, h5, h6 {
     transition: opacity .2s linear;
 }
 
-.about__item:hover .about__text {
+.cards__item:hover .cards__text {
     opacity: 1;
+}
+
+.cards__info {
+    text-align: center;
+
+    margin-top: 20px;
+}
+
+.cards__name {
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    margin-bottom: 10px;
+}
+
+.cards__prof {
+    font-weight: 300;
+    font-style: italic;
+    font-size: 15px;
+    color: #a8a8a8;
 }
 
 
@@ -442,6 +470,7 @@ hr {
 }
 
 .what_we_do {
+    margin-top: 90px;
     display: flex;  
 }
 
@@ -465,8 +494,8 @@ hr {
 
 .accordion__item__icon {
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 15px;
+    left: 15px;
 
     
 }
@@ -476,13 +505,13 @@ hr {
     font-size: 14px;
     color: #333;
     font-weight: 700;
-    padding: 10px 50px;
+    padding: 20px 70px;
 
     border-bottom: 1px solid #e5e5e5;
 }
 
 .accordion__item__text{
-    padding-left: 5px;
+    padding: 15px 20px;
 }
 
 .accordion__item__title::after {
@@ -493,12 +522,122 @@ hr {
     height: 20px;
 
     position: absolute;
-    right: 15px;
-    top: 15px;
+    right: 25px;
+    top: 25px;
 
     border-top: 5px solid #cccccc;
     border-left: 5px solid #cccccc;
 
     transform: translateY(-50%)
     rotate(225deg);
+}
+
+
+
+/* Reviews */
+.reviews {
+    padding: 0 110px ;
+    position: relative;
+}
+
+.reviews__item {
+    position:relative;
+    padding-left: 210px;
+}
+
+.reviews__photo {
+    border: 2px solid #95e1d3;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.reviews__text {
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 300;
+    color: #a8a8a8;
+
+    margin-bottom: 15px;
+}
+
+.reviews__author {
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    color: #333;
+}
+
+.reviews__author::before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 60px;
+    height: 3px;
+    margin-right: 10px;
+
+    background-color: #f38181;
+}
+
+.reviews__btn {
+    font-size: 0;
+    color: transparent;
+
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    transform: translateY(-50%);
+}
+
+.reviews__btn--prev {
+    left: 0;
+    transform: rotate(-45deg);
+}
+
+.reviews__btn--next {
+    right: 0;
+    transform: rotate(135deg);
+}
+
+.reviews__btn::after {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+
+    border-top: 5px solid #ccc;
+    border-left: 5px solid #ccc;
+}
+
+
+/* Social */
+.social {
+    display: flex;
+    justify-content: center;
+}
+
+.social__item {
+    width: 55px;
+    height: 55px;
+    padding: 7px;
+
+    background-color: #fce38a;
+    border-right: 1px solid #f38181;
+
+    font-size: 30px;
+    text-decoration: none;
+    color: #f38181;
+
+    transition: background .2s linear,
+    color .2s linear;
+}
+
+.social__item:last-child {
+    border-right: 0;
+}
+
+.social__item:hover {
+    color: #fff;
+    background-color: #f38181;
 }
