--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,14 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #f8f8f8;
 }
 
+.section--works {
+    padding-bottom: 0;
+}
+
+.section--cilents {
+    background: url("../images/clients/clients_bg.jpg") center no-repeat;
+}
+
 .section__header {
     width: 100%;
     max-width: 950px;
@@ -542,11 +550,14 @@ hr {
 
 .reviews__item {
     position:relative;
-    padding-left: 210px;
+    padding-left: 250px;
 }
 
 .reviews__photo {
     border: 2px solid #95e1d3;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
 
     position: absolute;
     top: 0;
@@ -639,5 +650,129 @@ hr {
 
 .social__item:hover {
     color: #fff;
+    background-color: #f38181;
+}
+
+
+/* Logos */
+.logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/* Works */
+.works {
+    display: flex;
+}
+
+.works__col {
+    flex: 1 1 0;
+}
+
+.works__item {
+    position: relative;
+
+    background: linear-gradient(#f38181,#fce38a);
+}
+
+.works__item__img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+
+    transition: opacity .2s linear;
+}
+
+.works__item:hover .works__item__img {
+    opacity: .1;
+}
+
+.works__item:hover .works__item__info {
+    opacity: 1;
+}
+
+.works__item__info {
+    width: 100%;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+
+    text-align: center;
+    color: #fff;
+    opacity: 0;
+
+    transform: translateY(-50%);
+    transition: opacity .2s linear;
+}
+
+.works__title {
+    margin-bottom: 5px;
+
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.works__text {
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+
+/* Clients */
+.clients {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.clients__item {
+    width: 50%;
+    padding: 0 40px 0 175px;
+    margin-bottom: 70px;
+
+    position: relative;
+}
+
+.clients__img {
+    border-radius: 50%;
+
+    position: absolute;
+    top: 0;
+    left: 30px;
+    z-index: 1;
+}
+
+.clients__name {
+    margin-bottom: 5px;
+
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.clients__prof {
+    font-style: italic;
+    font-weight: 300;
+    font-size: 15px;
+    color: #333;
+}
+
+.clients__text {
+    font-size: 15px;
+    color: #a8a8a8;
+}
+
+.clients__text::before {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 20px 0;
+
     background-color: #f38181;
 }
